--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -1,44 +1,17 @@
-name: latex resume
-
-on:
-  # Triggers the workflow on push or pull request events but only for the main branch
-  push:
-    branches:
-    - master
-    paths:
-    - '/resume.tex'
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
+name: Build LaTeX document
+on: [push]
 jobs:
-  latex-job:
+  build_latex:
     runs-on: ubuntu-latest
     steps:
-      
-      - name: download paper repo
-        uses: actions/checkout@v1
-      - name: build pdf 
+      - name: Set up Git repository
+        uses: actions/checkout@v3
+      - name: Compile LaTeX document
         uses: xu-cheng/latex-action@v2
         with:
           root_file: resume.tex
-      - name: stash pdf
-        run: |
-          mv resume.pdf $HOME # cache the file
-      - name: checkout gh_actions_builds branch
-        uses: actions/checkout@v1
+      - name: Upload PDF file
+        uses: actions/upload-artifact@v3
         with:
-          ref: gh_actions_builds
-      - name: commit pdf
-        run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          mv $HOME/resume.pdf $(pwd) # bring it back 
-          git add resume.pdf
-          git commit -m "Add changes"
-      - name:  push pdf
-        uses: ad-m/github-push-action@v0.6.0
-        with: 
-          branch: gh_actions_builds 
-          force: false
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          name: PDF
+          path: resume.pdf
