--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -9,7 +9,7 @@ jobs:
       - name: Compile LaTeX document
         uses: xu-cheng/latex-action@v2
         with:
-          root_file: main.tex
+          root_file: resume.tex
       - name: Upload PDF file
         uses: softprops/action-gh-release@v1
         with:
