--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -13,5 +13,6 @@ jobs:
       - name: Upload PDF file
         uses: softprops/action-gh-release@v1
         with:
+          tag_name: test
           files: |
             resume.pdf
